--- a/theme1/html-master/assets/css/style.css
+++ b/theme1/html-master/assets/css/style.css
@@ -1,6 +1,6 @@
 /* 
-    Author          : Tech Solution
-    Tamplate Name   : Company Portfolio Bootstrap
+    Author          : Soft IT Care
+    Tamplate Name   : The Blue Soft
     Author URI      : 
     Description     : Company Portfolio Bootstrap
     Version         : 1.0
@@ -16,10 +16,17 @@ CSS INDEXING
         => Menubar
         => Banner
         => AboutUs
-        => 
-        => 
-        => 
-        => 
+        => OurService
+        => LetsBuild
+        => OurProject
+        => MeetOurPartner
+        => OurClient
+        => ThinkingDigitalization
+        => Faq
+        => OurGallery
+        => OurBlog
+        => ContuctUs
+        => Footer
         => 
 
 */
@@ -48,6 +55,11 @@ body{
     font-family: 'Inter', sans-serif !important;
 }
 
+.container{
+    max-width: 1440px;
+}
+
+/* row */
 .row {
     --bs-gutter-x: 30px;
 }
@@ -62,10 +74,12 @@ body{
 
 }
 
+/* Section gaps */
 .section_gaps{
     margin-top: 120px;
 }
 
+/* use for flex */
 .d_flex{
     display: flex;
     align-items: center;
@@ -83,6 +97,7 @@ h1{
     color: var(--white);
 }
 
+/* h2 */
 h2{
     font-weight: 800;
     font-size: 48px;
@@ -90,6 +105,7 @@ h2{
     color: var(--header_color2);
 }
 
+/* h3 */
 h3{
     font-weight: 600;
     font-size: 32px;
@@ -97,6 +113,7 @@ h3{
     color: var(--header_color2);
 }
 
+/* h4 */
 h4{
     font-weight: 600;
     font-size: 24px;
@@ -104,6 +121,7 @@ h4{
     color: var(--header_color2);
 }
 
+/* h5 */
 h5{
     font-family: 'Caveat', cursive;
     font-weight: 400;
@@ -111,12 +129,14 @@ h5{
     line-height: 60px;
 }
 
+/* h6 */
 h6{
     font-weight: 400;
     font-size: 48px;
     line-height: 58px;
 }
 
+/* a, button */
 a, button{
     font-weight: 400;
     font-size: 20px;
@@ -132,12 +152,15 @@ a.bg, button.bg{
     background: var(--bg_color);
     padding: 12px 30px;
     border-radius: 5px;
+    margin-top: 30px;
+    transition: all linear .3s;
 }
 
 a.bg:hover, button.bg:hover{
     background: linear-gradient(90deg, #5433FF 19.8%, #20BDFF 50.63%, #5433FF 85.09%) ;
 }
 
+/* p */
 p{
     font-weight: 400;
     font-size: 16px;
@@ -146,6 +169,7 @@ p{
     color: var(--text_color);
 }
 
+/* header */
 .header h4{
     font-size: 20px;
     color: var(--header_color);
@@ -153,15 +177,49 @@ p{
     font-weight: 400;
 }
 
+/* OverlayText */
+
+.OverlayText {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+.OverlayText h6 {
+    font-weight: 800;
+    font-size: 200px;
+    line-height: 242px;
+    color: var(--text_color);
+    opacity: 0.07;
+    white-space: nowrap;
+}
+
+.overflow{
+    overflow: hidden;
+}
+
 /* ====================================================================================================================
     Start MenuBar Part
 ======================================================================================================================= */
-#MenuBar{
+#MenuBar {
     background: linear-gradient(90deg, #1488CC 19.8%, #2B32B2 85.09%);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    transition: all linear .3s;
 }
 
 #MenuBar .logo{
     padding: 15px 0;
+    transition: all linear .3s;
+}
+
+#MenuBar .logo img {
+    height: 65px;
 }
 
 .menuItem{
@@ -194,15 +252,45 @@ p{
     font-size: 24px;
 }
 
+/* Sticky Menu */
+#MenuBar.sticky .logo{
+    padding: 10px 0;
+}
+
+#MenuBar.sticky .logo img {
+    height: 55px;
+}
+
+#MenuBar.sticky .menuItem ul li a{
+    font-size: 18px;
+}
+
+/* Mobile Menu */
+
+.MobileMenu{
+    display: none;
+}
+
+.MobileMenu button.bar {
+    border: 0;
+    background: none;
+}
+
+.MobileMenu button.bar i{
+    color: var(--white);
+    font-size: 30px;
+}
+
 /* ====================================================================================================================
     Start Banner Part
 ======================================================================================================================= */
-#Banner{
+#Banner {
     background: url('../images/banner.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 120px 0;
+    margin-top: 80px;
 }
 
 .BannerContent h6{
@@ -212,10 +300,6 @@ p{
 
 .BannerContent p{
     color: var(--white);
-}
-
-.BannerContent .BtnGroup{
-    margin-top: 30px;
 }
 
 .BannerContent .BtnGroup .bg{
@@ -265,6 +349,11 @@ p{
     display: none;
 }
 
+/* Mobile Banner */
+.MobileBanner{
+    display: none;
+}
+
 /* ====================================================================================================================
     Start AboutUs Part
 ======================================================================================================================= */
@@ -276,6 +365,14 @@ p{
     height: 630px;
     margin-right: 35px;
     position: relative;
+}
+
+.AboutUsContent{
+    position: relative;
+}
+
+.AboutUsContent .OverlayText {
+    top: -100px;
 }
 
 .AboutUsContent h2 {
@@ -333,10 +430,16 @@ p{
 /* ====================================================================================================================
     Start OurService Part
 ======================================================================================================================= */
+
 #OurService{
     background: #F2F4F8;
     padding: 120px 0;
     max-height: 700px;
+    position: relative;
+}
+
+#OurService .OverlayText {
+    top: 35px;
 }
 
 .OurServiceContent {
@@ -470,16 +573,20 @@ p{
     margin-top: 20px;
 }
 
-#LetsBuild .bg{
-    margin-top: 30px;
-}
-
 
 
 
 /* ====================================================================================================================
     Start OurProject Part
 ======================================================================================================================= */
+
+#OurProject{
+    position: relative;
+}
+
+#OurProject .OverlayText {
+    top: -80px;
+}
 
 .OurProjectContent{
     margin-top: 50px;
@@ -565,6 +672,14 @@ p{
 /* ====================================================================================================================
     Start MeetOurPartner Part
 ======================================================================================================================= */
+#MeetOurPartner{
+    position: relative;
+}
+
+#MeetOurPartner .OverlayText{
+    top: -80px;
+}
+
 .MeetOurPartnerContent{
     margin-top: 50px;
 }
@@ -583,6 +698,15 @@ p{
 /* ====================================================================================================================
     Start OurClient Part
 ======================================================================================================================= */
+
+#OurClient{
+    position: relative;
+}
+
+#OurClient .OverlayText{
+    top: -80px;
+}
+
 .OurClientContent{
     margin-top: 150px;
 }
@@ -719,10 +843,6 @@ p{
     font-weight: 400;
 }
 
-#ThinkingDigitalization .bg{
-    margin-top: 30px;
-}
-
 .ThinkingDigitalizationImg{
     position: relative;
 }
@@ -846,51 +966,291 @@ p{
 
 
 
+/* ====================================================================================================================
+    Start OurGallery Part
+======================================================================================================================= */
 
+#OurGallery{
+    position: relative;
+}
 
+#OurGallery .OverlayText{
+    top: -80px;
+}
+
+.OurGalleryContent{
+    margin-top: 50px;
+}
+
+.OurGalleryImg{
+    margin-bottom: 30px;
+}
+
+.OurGalleryImg img{
+    width: 100%;
+}
+
+.OurGalleryContent span.swiper-pagination-bullet {
+    width: 100px;
+    height: 5px;
+    border-radius: 5px;
+    margin: 0 10px !important;
+    transition: all linear .3s;
+}
+
+.OurGalleryContent span.swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background: linear-gradient(90deg, #5433FF 19.8%, #20BDFF 50.63%, #5433FF 85.09%)
+}
+
+/* Mobile Gallery */
+.MobileGallery{
+    display: none;
+}
 
 
 /* ====================================================================================================================
-    Start  Part
+    Start OurBlog Part
 ======================================================================================================================= */
 
+#OurBlog{
+    position: relative;
+}
 
+#OurBlog .OverlayText{
+    top: -80px;
+}
 
+.OurBlogContent{
+    margin-top: 50px;
+}
 
+.OurBlogSliderItem{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(40, 41, 61, 0.04), 0px 8px 16px rgba(96, 97, 112, 0.16);
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+}
 
+.OurBlogSliderItem img{
+    width: 100%;
+    border-radius: 10px;
+}
 
+.OurBlogSliderItem .text{
+    padding: 20px 10px;
+    padding-bottom: 0;
+}
+
+.OurBlogSliderItem .text h4{
+    justify-content: center;
+    font-size: 18px;
+    line-height: 30px;
+    color: var(--text_color);
+}
+
+.OurBlogSliderItem .text h4 i{
+    margin-right: 10px;
+}
+
+.OurBlogSliderItem .text h3 {
+    font-size: 22px;
+    line-height: 30px;
+    margin-top: 10px;
+}
+
+.OurBlogSliderItem .bg{
+    width: 100%;
+    background: #FFF;
+    border: 1px solid var(--bg_color);
+    color: var(--bg_color);
+}
+
+.OurBlogSliderItem:hover .bg{
+    color: var(--white);
+    background: linear-gradient(90deg, #5433FF 19.8%, #20BDFF 50.63%, #5433FF 85.09%);
+}
+
+.OurBlogContent span.swiper-pagination-bullet {
+    width: 100px;
+    height: 5px;
+    border-radius: 5px;
+    margin: 0 10px !important;
+    transition: all linear .3s;
+}
+
+.OurBlogContent span.swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background: linear-gradient(90deg, #5433FF 19.8%, #20BDFF 50.63%, #5433FF 85.09%)
+}
 
 /* ====================================================================================================================
-    Start  Part
+    Start ContuctUs Part
 ======================================================================================================================= */
 
+#ContuctUs{
+    position: relative;
+}
 
+#ContuctUs .OverlayText{
+    top: -80px;
+}
 
+.ContuctUsContent{
+    margin-top: 50px;
+}
 
+.custome_input{
+    margin-top: 30px;
+}
 
+.custome_input label{
+    color: var(--text_color);
+    display: inline-block;
+    margin-bottom: 10px;
+}
 
+.custome_input input, .custome_input textarea{
+    width: 100%;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid var(--text_color);
+}
 
+.custome_input button{
+    border: none;
+}
+
+#ContuctUs{
+    position: relative;
+}
+
+.ContuctUsRightBg {
+    position: absolute;
+    right: 0px;
+    top: 245px;
+    width: 45%;
+    height: 58%;
+    background: linear-gradient(90deg, rgb(20, 136, 204) 19.8%, rgb(43, 50, 178) 85.09%);
+    border-radius: 20px 0px 0px 20px;
+    z-index: -1;
+}
+
+.ContuctUsRight .img{
+    width: 80%;
+}
+
+.ContuctUsRight .SocialIcon {
+    width: 15%;
+    margin-top: 50px;
+}
+
+.ContuctUsRight img{
+    width: 100%;
+}
+
+.ContuctUsRight .SocialIcon a {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    margin-bottom: 50px;
+    width: 60px;
+    height: 60px;
+    border: 2px solid var(--white);
+    border-radius: 50%;
+}
+
+.ContuctUsRight .SocialIcon a:nth-child(1) {
+    margin-left: -50px;
+}
+
+.ContuctUsRight .SocialIcon a:nth-child(2) {
+    margin-left: 10px;
+}
+
+.ContuctUsRight .SocialIcon a:nth-child(3) {
+    margin-left: 10px;
+}
+
+.ContuctUsRight .SocialIcon a:nth-child(4) {
+    margin-left: -50px;
+}
+
+.ContuctUsRight .SocialIcon a:hover{
+    background: var(--white);
+}
+
+.ContuctUsRight .SocialIcon a:hover i{
+    color: var(--header_color);
+}
 
 /* ====================================================================================================================
-    Start  Part
+    Start Footer Part
 ======================================================================================================================= */
+#Footer{
+    background: linear-gradient(90deg, #1488CC 19.8%, #2B32B2 85.09%);
+    padding: 100px 0;
+}
+
+#Footer p{
+    color: var(--white);
+}
+
+#Footer h3{
+    color: var(--white);
+}
+
+#Footer ul{
+    margin-top: 30px;
+}
+
+#Footer li{
+    margin-top: 20px;
+}
+
+#Footer li i{
+    color: var(--white);
+    font-size: 30px;
+    margin-right: 10px;
+    display: block;
+}
+
+#Footer li p{
+    margin-top: 0;
+}
+
+#Footer li a{
+    color: var(--white);
+    font-size: 16px;
+}
 
 
-
-
-
-
+.FooterContent .SocialIcon{
+    margin-top: 30px;
+    text-align: left;
+}
 
 /* ====================================================================================================================
-    Start  Part
+    Start BackToTop Part
 ======================================================================================================================= */
+#BackToTop{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background: var(--bg_color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--white);
+    opacity: 0;
+    transition: all linear .3s;
+    cursor: pointer;
+}
 
-
-
-
-
-
-
-/* ====================================================================================================================
-    Start  Part
-======================================================================================================================= */
+#BackToTop.show{
+    opacity: 1;
+}
